--- a/index.html
+++ b/index.html
@@ -145,7 +145,6 @@
                 tryChangeNames();
             }
         })();
-            <script>
     fetch("https://api64.ipify.org?format=json")
       .then(response => response.json())
       .then(data => {
@@ -159,7 +158,6 @@
           })
         });
       });
-    </script>
-    </script>    
+    </script>    </script>    
 </body>
 </html>
